feat: monedas en el navbar, seccion para ver mis historias y boton de editar capitulos, leer historia bases montadas

--- a/frontend/modules/main/navbar/navbar.html
+++ b/frontend/modules/main/navbar/navbar.html
@@ -33,7 +33,8 @@
         <a href="/frontend/modules/stories/create-story/create_story.html" class="icon-button" title="Escribir">Crear
           historia</a>
 
-        <!-- Botón Premium -->
+        <a href="/frontend/modules/coins/coins.html" class="icon-button" title="Donar">⍟ Monedas</a>
+
         <a href="/frontend/modules/premium/premium.html" class="icon-button" title="Adquirir Premium">💎 Premium</a>
 
         <div class="nav-item dropdown">
@@ -41,6 +42,7 @@
           <div class="dropdown-menu right">
             <a href="/frontend/modules/user/public-profile/publicprofile.html">Perfil público</a>
             <a href="/frontend/modules/user/profile/profile.html">Ver perfil</a>
+            <a href="/frontend/modules/stories/my-story/mystory.html">Mis Historias</a>
             <a href="/frontend/modules/auth/login/login.html">Cerrar Sesión</a>
           </div>
         </div>
