--- a/frontend/modules/stories/my-story/mystory.html
+++ b/frontend/modules/stories/my-story/mystory.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="acciones">
-              <a href="/leer/1" class="btn-outline">Ver</a>
+              <a href="/frontend/modules/stories/preview-story/preview.html" class="btn-outline">Ver</a>
               <a href="/escribir/1" class="btn-solid">Editar</a>
             </div>
           </div>
