--- a/frontend/modules/stories/my-story/mystory.html
+++ b/frontend/modules/stories/my-story/mystory.html
@@ -40,10 +40,6 @@
           <div class="stat-value text-orange" id="borradores">0</div>
           <div class="stat-label">Borradores</div>
         </div>
-        <div class="stat-card">
-          <div class="stat-value" id="lecturasTotales">0</div>
-          <div class="stat-label">Lecturas Totales</div>
-        </div>
       </section>
 
 
@@ -67,7 +63,7 @@
             </div>
 
             <div class="acciones">
-              <a href="/frontend/modules/stories/preview-story/preview.html" class="btn-outline">Ver</a>
+              <a href="/leer/1" class="btn-outline">Ver</a>
               <a href="/escribir/1" class="btn-solid">Editar</a>
             </div>
           </div>
