--- a/frontend/modules/user/public-profile/publicprofile.html
+++ b/frontend/modules/user/public-profile/publicprofile.html
@@ -28,10 +28,18 @@
         <h2 id="story-title">Historias</h2>
         <span id="story-count" class="badge stories-count"></span>
       </div>
-      <div id="stories-grid" class="stories-grid">
-      </div>
+      <div id="stories-grid" class="stories-grid"></div>
     </section>
   </main>
+
+  <div id="user-list-modal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <h2 id="modal-title"></h2>
+      <div id="modal-user-list" class="user-list">
+      </div>
+    </div>
+  </div>
 
   <script src="/frontend/modules/main/navbar/navbar.js"></script>
   <script src="publicprofile.js"></script>
