fix: arreglo  funcionalidad de cierre de sesión y mejorar la gestión del navbar en el panel de administración

--- a/frontend/modules/admin/navbar/navbar.html
+++ b/frontend/modules/admin/navbar/navbar.html
@@ -8,7 +8,7 @@
   </div>
   <div class="admin-header-right">
     <span class="admin-badge">🛡️ Admin</span>
-    <a href="/frontend/modules/auth/login/login.html" class="btn-primary">Cerrar Sesión</a>
+    <a href="#" id="admin-logout-btn" class="btn-primary">Cerrar Sesión</a>
   </div>
 </header>
 
@@ -17,6 +17,6 @@
     <li><a href="#" class="active" data-section="dashboard">Dashboard</a></li>
     <li><a href="#" data-section="users">Usuarios</a></li>
     <li><a href="#" data-section="stories">Historias</a></li>
-    <li><a href="#" data-section="reports">Reportes <span class="reports-count">2</span></a></li>
+    <li><a href="#" data-section="reports">Reportes <span class="reports-count">0</span></a></li>
   </ul>
 </nav>
