feat: agregar sección de historias favoritas y su gestión en la interfaz

--- a/frontend/modules/main/navbar/navbar.html
+++ b/frontend/modules/main/navbar/navbar.html
@@ -42,6 +42,7 @@
             <a href="#" id="public-profile-link">Perfil público</a>
             <a href="/frontend/modules/user/profile/profile.html">Ver perfil</a>
             <a href="/frontend/modules/stories/my-story/mystory.html">Mis Historias</a>
+            <a href="/frontend/modules/favorites/favorites.html">Mis Favoritos</a>
             <a href="#" id="logoutBtn">Cerrar Sesión</a>
           </div>
         </div>
